--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-paystack": "^6.0.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "toastr": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
